Correct the "touching backgrounds" negative margin so there's no overlap

--- a/wp-content/themes/wprig-ucf-bands/assets/css/src/content.css
+++ b/wp-content/themes/wprig-ucf-bands/assets/css/src/content.css
@@ -205,7 +205,7 @@
 .alignfull.has-background-dim + .alignfull.has-background,
 .alignfull.has-background + .alignfull.has-background,
 .alignfull.has-background + .alignfull.has-background-dim {
-	margin-top: calc(var(--extra-content-spacing) * -2);
+	margin-top: calc((var(--extra-content-spacing) + var(--content-spacing)) * -1);
 }
 
 /* remove wide block top margin if first in "container" */
